--- a/index1.html
+++ b/index1.html
@@ -54,7 +54,7 @@
   </div>
 
   <script>
-  // Blendmodus check
+  // ------------------ Helpers ------------------
   function supportMode(ctx, mode) {
     const prev = ctx.globalCompositeOperation;
     ctx.globalCompositeOperation = mode;
@@ -63,35 +63,43 @@
     return ok;
   }
 
-  // Web Speech, kies een NL stem
-  let nlVoice = null;
-  function pickDutchVoice() {
+  // Web Speech, NL standaard, speciale uitspraak voor turquoise
+  let nlVoice = null, enVoice = null;
+  function pickVoices() {
     try {
       const voices = window.speechSynthesis ? speechSynthesis.getVoices() : [];
       nlVoice = voices.find(v => v.lang && v.lang.toLowerCase().startsWith("nl")) || null;
-    } catch { nlVoice = null; }
+      enVoice = voices.find(v => v.lang && /^en-(gb|us)/i.test(v.lang))
+             || voices.find(v => v.lang && v.lang.toLowerCase().startsWith("en"))
+             || null;
+    } catch { nlVoice = null; enVoice = null; }
   }
   if ("speechSynthesis" in window) {
-    pickDutchVoice();
-    speechSynthesis.onvoiceschanged = pickDutchVoice;
+    pickVoices();
+    speechSynthesis.onvoiceschanged = pickVoices;
   }
+  const uitspraakMap = { "turquoise": "tuhr KWA zuh" };
   function spreekKleur(naam) {
     const aan = document.getElementById("spreekToggle")?.checked;
-    if (!aan) return;
-    if (!("speechSynthesis" in window)) return;
+    if (!aan || !("speechSynthesis" in window)) return;
     try {
       speechSynthesis.cancel();
-      const u = new SpeechSynthesisUtterance(naam);
-      if (nlVoice) u.voice = nlVoice;
-      u.lang = nlVoice?.lang || "nl-NL";
-      u.rate = 1;
-      u.pitch = 1;
-      u.volume = 1;
+      const key = String(naam || "").toLowerCase().trim();
+      const custom = uitspraakMap[key] || null;
+      const u = new SpeechSynthesisUtterance(custom || naam);
+      if (custom) {
+        if (enVoice) u.voice = enVoice;
+        u.lang = enVoice?.lang || "en-US";
+      } else {
+        if (nlVoice) u.voice = nlVoice;
+        u.lang = nlVoice?.lang || "nl-NL";
+      }
+      u.rate = 1; u.pitch = 1; u.volume = 1;
       speechSynthesis.speak(u);
-    } catch { /* stil falen, geen blokkade van de UI */ }
+    } catch { /* stil falen */ }
   }
 
-  // Kleuren
+  // ------------------ Config ------------------
   let opties = ["zalm roze","lila","beige","wit","zilver","goud","turquoise"];
   const kleurMap = {
     "zalm roze":"#FFA07A",
@@ -104,7 +112,7 @@
   };
   const metallicKleuren = new Set(["goud","zilver"]);
 
-  // Zorg dat goud en zilver geen buren zijn
+  // goud en zilver geen buren
   function scheidBuren(arr, a, b) {
     const n = arr.length;
     let ia = arr.indexOf(a), ib = arr.indexOf(b);
@@ -119,17 +127,17 @@
   }
   opties = scheidBuren(opties, "goud", "zilver");
 
-  const donkereSegmenten = new Set([]); // zwarte segmenttekst
-  const lijnenWitKleuren = new Set([]); // niet nodig bij dit palet
-  const pupilKleuren = new Set([]);     // niet nodig bij dit palet
+  const donkereSegmenten = new Set([]);   // segmenttekst zwart
+  const lijnenWitKleuren = new Set([]);   // bij dit palet niet nodig
+  const pupilKleuren = new Set([]);       // bij dit palet niet nodig
 
-  // Spinner
+  // ------------------ Spinner ------------------
   const rad = document.getElementById("rad");
   const rctx = rad.getContext("2d");
-  const CX = 220, CY = 200, R = 190; // rad links, ruimte rechts voor pijl
+  const CX = 220, CY = 200, R = 190; // rad links, pijl rechts
   let hoek = 0, bezig = false, gekozen = opties[0];
 
-  // Normaliseer bogen, eindhoek altijd groter of gelijk
+  // zorg dat elke boog end >= start
   function normBoog(a0, a1) {
     const tau = Math.PI * 2;
     let s = a0, e = a1;
@@ -137,7 +145,7 @@
     return [s, e];
   }
 
-  // Metallic gloed in segment, licht vast aan het scherm
+  // metallic gloed in segment, licht vast in schermcoördinaten
   function tekenMetallicInSegment(naam, a0, a1) {
     if (!metallicKleuren.has(naam)) return;
     const [s, e] = normBoog(a0, a1);
@@ -149,6 +157,7 @@
     rctx.closePath();
     rctx.clip();
 
+    // diepte overlay
     const overlayGrad = rctx.createLinearGradient(CX, CY - R, CX, CY + R);
     if (naam === "goud") {
       overlayGrad.addColorStop(0.00, "rgba(255,250,210,0.70)");
@@ -177,6 +186,7 @@
     }
     rctx.restore();
 
+    // glansstrepen
     rctx.save();
     rctx.translate(CX, CY);
     rctx.rotate(-Math.PI / 10);
@@ -193,6 +203,7 @@
     rctx.restore();
     rctx.globalAlpha = 1;
 
+    // highlights
     rctx.save();
     if (supportMode(rctx, "screen")) {
       rctx.globalCompositeOperation = "screen";
@@ -209,6 +220,7 @@
       rg2.addColorStop(1.00, "rgba(255,255,255,0.00)");
       rctx.fillStyle = rg2;
       rctx.fillRect(CX - R, CY - R, R * 2, R * 2);
+
       rctx.globalCompositeOperation = "source-over";
     } else {
       rctx.globalAlpha = 0.7;
@@ -235,6 +247,7 @@
       let a1 = (i + 1) * stap + rot;
       const [s, e] = normBoog(a0, a1);
 
+      // basisvulling
       rctx.beginPath();
       rctx.moveTo(CX, CY);
       rctx.arc(CX, CY, R, s, e, false);
@@ -242,12 +255,15 @@
       rctx.fillStyle = kleurMap[naam] || "#000";
       rctx.fill();
 
+      // metallic gloed voor goud en zilver
       tekenMetallicInSegment(naam, s, e);
 
+      // segmentrand
       rctx.strokeStyle = "#222";
       rctx.lineWidth = 2;
       rctx.stroke();
 
+      // label
       const mid = s + (e - s) / 2;
       const tekstkleur = donkereSegmenten.has(naam) ? "#fff" : "#000";
       rctx.save();
@@ -260,6 +276,7 @@
       rctx.restore();
     }
 
+    // buitenring
     rctx.lineWidth = 6;
     rctx.strokeStyle = "#333";
     rctx.beginPath();
@@ -267,7 +284,7 @@
     rctx.stroke();
   }
 
-  // Pijl rechts, wijst naar links
+  // pijl buiten het rad, rechts, wijst naar links
   function tekenPijl() {
     const offset = 22;
     const tipX = CX + R + offset;
@@ -340,7 +357,7 @@
     document.getElementById("live").textContent = `Kleur ${tekst}`;
   }
 
-  // Monster
+  // ------------------ Monster ------------------
   const mCanvas = document.getElementById("monster");
   const m = mCanvas.getContext("2d");
   const imgMask  = new Image();  imgMask.src  = "monster-mask.png";
@@ -371,6 +388,7 @@
     m.restore();
   }
 
+  // lijnenWit, toonPupillen, metallicType: "goud" of "zilver" of null
   function kleurMonster(vulkleur, lijnenWit, toonPupillen, metallicType) {
     if (!assetsGereed) return;
 
@@ -385,7 +403,7 @@
     const x = Math.round((mCanvas.width - w) / 2);
     const y = Math.round((mCanvas.height - h) / 2);
 
-    // vulling
+    // vulling binnen masker
     m.save();
     m.fillStyle = vulkleur;
     m.fillRect(x, y, w, h);
@@ -394,8 +412,10 @@
     m.drawImage(imgMask, x, y, w, h);
     m.globalCompositeOperation = "source-over";
 
+    // metallic gloed
     if (metallicType) voegMetaalGlansToeMonster(metallicType, x, y, w, h);
 
+    // lijnenlaag
     if (!lijnenWit) {
       m.drawImage(imgLine, x, y, w, h);
     } else {
@@ -403,9 +423,9 @@
       off.width = w; off.height = h;
       const o = off.getContext("2d");
       o.fillStyle = "#ffffff";
-      o.fillRect(0, 0, w, h);
+      o.fillRect(0, 0, off.width, off.height);
       o.globalCompositeOperation = "destination-in";
-      o.drawImage(imgLine, 0, 0, w, h);
+      o.drawImage(imgLine, 0, 0, off.width, off.height);
       o.globalCompositeOperation = "source-over";
       m.drawImage(off, x, y);
     }
